plugins {
    id 'java'
    id 'application'
    id 'idea'
}

group 'de.uniba.dsg.mendress'
version '1.0'

sourceCompatibility = 1.8

mainClassName = "de.uniba.dsg.serverless.profiling.StatsRetriever"

repositories {
    mavenCentral()
}

sourceSets {
    main.java.srcDirs = ['src/main/java']
    main.resources.srcDirs = ['src/main/resources']
}

idea {
    module {
        downloadJavadoc = true
    }
}

dependencies {
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    compile group: 'com.google.guava', name: 'guava', version: '28.0-jre'
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'

    // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core
    compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.0'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'

    // https://mvnrepository.com/artifact/com.github.docker-java/docker-java
    compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.2'

    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.28'
    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jdk-http', version: '2.28'
    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.28'
    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '2.28'
    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.28'
    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.28'

    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    // https://mvnrepository.com/artifact/javax.activation/activation
    compile group: 'javax.activation', name: 'activation', version: '1.1.1'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
}

task run(type: JavaExec, overwrite: true) {
    workingDir '../'
    classpath = sourceSets.main.runtimeClasspath
    main = 'de.uniba.dsg.serverless.profiling.StatsRetriever'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    manifest {
        attributes(
                'Main-Class': 'de.uniba.dsg.serverless.profiling.StatsRetriever'
        )
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
    // https://github.com/docker-java/docker-java/issues/1098
    exclude("META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")
}
